Navigation buttons are ready

--- a/src/index.html
+++ b/src/index.html
@@ -56,26 +56,26 @@
                 <div class="logo-container-outer">
                     <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
                 </div>
+<!--                 <div>
+                    <a data-link="home" class="btn btn-nav" id="scroll-home-btn">Home</a>
+                </div> -->
                 <div>
-                    <a href="#home" class="btn btn-nav">Home</a>
+                    <a data-link="concept" class="btn btn-nav" id="scroll-concept-btn">Conceito</a>
                 </div>
                 <div>
-                    <a href="#conceito" class="btn btn-nav">Conceito</a>
+                    <a data-link="products" class="btn btn-nav">Produtos</a>
                 </div>
                 <div>
-                    <a href="#produtos" class="btn btn-nav">Produtos</a>
+                    <a data-link="story" class="btn btn-nav" id="scroll-story-btn">História</a>
                 </div>
                 <div>
-                    <a href="#historia" class="btn btn-nav">História</a>
+                    <a data-link="hashtag" class="btn btn-nav" id="scroll-hashtag-btn">#bomaoquadrado</a>
                 </div>
                 <div>
-                    <a href="#bomaoquadrado" class="btn btn-nav">#bomaoquadrado</a>
+                    <a data-link="contacts" class="btn btn-nav" id="scroll-contacts-btn">Contactos</a>
                 </div>
                 <div>
-                    <a href="#contactos" class="btn btn-nav">Contactos</a>
-                </div>
-                <div>
-                    <a href="#eventos" class="btn btn-nav">Eventos</a>
+                    <a data-link="events" class="btn btn-nav" id="scroll-events-btn">Eventos</a>
                 </div>
             </nav>
             <img src="./assets/img/logo.png" class="logo-landing-page" alt="">
@@ -85,7 +85,7 @@
                 <div></div>
             </div>
         </header>
-        <section class="section parallax bg1 justify-content-center">
+        <section class="section parallax bg1 justify-content-center" id="homes">
             <div>
                 <h1>Creparia Artesanal</h1>
                 <h3>Quem prova quer mais!</h3>
@@ -93,7 +93,7 @@
             </div>
         </section>
         <!-- Conceito -->
-        <section class="section static card-background-light">
+        <section class="section static card-background-light" id="concept">
             <h1>Conceito</h1>
             <div>
                 <p>
@@ -226,7 +226,7 @@
         <section class="section parallax bg3">
         </section>
         <!-- História -->
-        <section class="section static card-background-light">
+        <section class="section static card-background-light" id="story">
             <h1>História</h1>
             <div>
                 <p>
@@ -240,7 +240,7 @@
         <section class="section parallax bg4">
         </section>
         <!-- #bomaoquadrado -->
-        <section class="section static card-background-dark">
+        <section class="section static card-background-dark" id="hashtag">
                 <h1 style="margin-bottom: 0">#bom2</h1>
                 <h5 style="margin-top: 0">#bomaoquadrado</h5>
                 <div>
@@ -255,7 +255,7 @@
         <section class="section parallax bg4">
         </section>
         <!-- Eventos -->
-        <section class="section static card-background-light">
+        <section class="section static card-background-light" id="events">
             <h1>Eventos</h1>
             <div>
                 <p>
@@ -269,7 +269,7 @@
         <section class="section parallax bg4">
         </section>
         <!-- Contactos -->
-        <section class="section static card-background-dark" id="form">
+        <section class="section static card-background-dark" id="contacts">
                 <h1>Contactos</h1>
                 <div>
                     <form class="contact-form">                   
