Products button in nav now also working

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                     <a data-link="concept" class="btn btn-nav" id="scroll-concept-btn">Conceito</a>
                 </div>
                 <div>
-                    <a data-link="products" class="btn btn-nav">Produtos</a>
+                    <a data-link="products" class="btn btn-nav" id="scroll-products-btn">Produtos</a>
                 </div>
                 <div>
                     <a data-link="story" class="btn btn-nav" id="scroll-story-btn">História</a>
