--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,14 @@
             <div>
                 <a data-link="contacts" class="btn btn-nav" id="scroll-contacts-btn">Contactos</a>
             </div>
+            <div class="nav-contact-info">
+                <!-- <div> -->
+                    <a href="tel:+35192X XXX XXX" target="_top">92X XXX XXX</a>
+                <!-- </div>
+                <div> -->
+                    <a href="mailto:geral@bomaoquadrado.pt" target="_top">geral@bomaoquadrado.pt</a>
+                <!-- </div> -->
+            </div>
         </nav>
         <main class="parallax-wrapper">
             <header class="main-header">
@@ -305,17 +313,26 @@
             <footer class="section static footer">
                 <div class="social-media-wrapper">
                     <a href="#" class="fab fa-twitter-square"></a>
-                    <a href="#" class="fab fa-facebook-square"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-<!--                     <img src="./assets/img/facebook-brands.svg" class="fb-icon" alt="">
-                    <img src="./assets/img/instagram-brands.svg" class="ig-icon" alt="">
-                    <img src="./assets/img/twitter-square-brands.svg" class="tw-icon" alt=""> -->
+                    <a href="https://www.facebook.com/bomaoquadrado/" class="fab fa-facebook-square"></a>
+                    <a href="https://www.instagram.com/bomaoquadrado/" class="fab fa-instagram"></a>
+                </div>
+                <div class="contact-information">
+                    <div>
+                        <a href="tel:+35192X XXX XXX" target="_top">92X XXX XXX</a>
+                    </div>
+                    <div>
+                        <a href="mailto:geral@bomaoquadrado.pt" target="_top">geral@bomaoquadrado.pt</a>
+                    </div>
+                </div>
+                <div class="footer-surplus">
+                    <div>&copy; Bom Ao Quadrado 2018</div>
+                    <div>Desenvolvido por: <a href="https://se.linkedin.com/in/calexandru2018/en">Alexandru Cheltuitor</a></div>
                 </div>
             </footer>
         </main>
         <button id="scroll-to-top" title="Ir para o topo">
-            <i class="arrow-up"></i>
-            <i class="arrow-up"></i>
+            <i class="custom-i arrow-up"></i>
+            <i class="custom-i arrow-up"></i>
     <!-- </div>   -->
 </button>
 </body>
