Finished the last touches on the nav buttons, since i addded home.

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
                 <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
             </div>
             <div>
+                <a data-link="homepage" class="btn btn-nav" id="scroll-home-btn">Home</a>
+            </div>
+            <div>
                 <a data-link="concept" class="btn btn-nav" id="scroll-concept-btn">Conceito</a>
             </div>
             <div>
@@ -93,7 +96,7 @@
                     <div></div>
                 </div>
             </header>
-            <section class="section parallax bg1 justify-content-center" id="homes">
+            <section class="section parallax bg1 justify-content-center" id="homepage">
                 <div>
                     <h1>Creparia Artesanal</h1>
                     <h3>Quem prova quer mais!</h3>
