Fixed bug with the icon in the navigation when resizing window

--- a/src/index.html
+++ b/src/index.html
@@ -17,26 +17,26 @@
             <div class="logo-container-outer">
                 <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
             </div>
-            <div>
-                <a data-link="homepage" class="btn btn-nav" id="scroll-home-btn">Home</a>
+            <div class="scroll-home-btn">
+                <a data-link="homepage" class="btn btn-nav">Home</a>
             </div>
             <div>
-                <a data-link="concept" class="btn btn-nav" id="scroll-concept-btn">Conceito</a>
+                <a data-link="concept" class="btn btn-nav">Conceito</a>
             </div>
             <div>
-                <a data-link="products" class="btn btn-nav" id="scroll-products-btn">Produtos</a>
+                <a data-link="products" class="btn btn-nav">Produtos</a>
             </div>
             <div>
-                <a data-link="story" class="btn btn-nav" id="scroll-story-btn">História</a>
+                <a data-link="story" class="btn btn-nav">História</a>
             </div>
             <div>
-                <a data-link="hashtag" class="btn btn-nav" id="scroll-hashtag-btn">#bomaoquadrado</a>
+                <a data-link="hashtag" class="btn btn-nav">#bomaoquadrado</a>
             </div>
             <div>
-                <a data-link="events" class="btn btn-nav" id="scroll-events-btn">Eventos</a>
+                <a data-link="events" class="btn btn-nav">Eventos</a>
             </div>
             <div>
-                <a data-link="contacts" class="btn btn-nav" id="scroll-contacts-btn">Contactos</a>
+                <a data-link="contacts" class="btn btn-nav">Contactos</a>
             </div>
             <div class="nav-contact-info">
                 <!-- <div> -->
