added email to in-dev page and fixed some style issues. Added lang tag to documents

--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -30,7 +30,7 @@
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="e-mail">
                     <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
                         <div class="content__gdpr">
-                            <div class="tooltip">Clique aqui e tome conhecimento dos termos:
+                            <div class="tooltip">Clique <u>aqui</u> e tome conhecimento dos termos:
                                 <div class="tooltiptext">
                                     <p>
                                         Poderá cancelar a sua subscrição a qualquer altura ao clicar no endereço que está localizado no rodapé dos nossos e-mail. Para mais informações sobre as nossas práticas de privacidade, visite o nosso website ou entre em contato connosco em caso de dúvida.
@@ -60,6 +60,9 @@
         <div class="logo-landing-page"></div>  
         <div class="bottom-text">
             <p>Quem prova quer mais!</p>
+        </div> 
+        <div class="mail-to">
+            <a href="mailto:geral@bomaoquadrado.pt" target="_top">geral@bomaoquadrado.pt</a>
         </div> 
     </div>
     <!-- <div class="stripe stripe-right"></div> -->
