changed the sup in the footer

--- a/src/index.html
+++ b/src/index.html
@@ -328,7 +328,7 @@
                     </div>
                 </div>
                 <div class="footer-surplus">
-                    <div>&copy; Bom Ao Quadrado 2018</div>
+                    <div>&copy; Bom<sup>2</sup> 2018</div>
                     <div>Desenvolvido por: <a href="https://se.linkedin.com/in/calexandru2018/en">Alexandru Cheltuitor</a></div>
                 </div>
             </footer>
