--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -3,7 +3,119 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dashboard - Bom Ao Quadrado</title>
+</head>
 <body>
+    <div class="page-wrapper">
+        <div class="login" style="display: none"></div>
+        <div class="dashboard">
+            <div class="user-info columns-2-of-4">
+                <img class="self-center" src="https://via.placeholder.com/150" alt="Imagem do administractor" srcset="">
+                <div class="user-settings">
+                    <a class="btn-auto btn-primary" href="#">Definicoes</a>
+                    <a class="btn-auto btn-primary" href="#">Logout</a>
+                </div>
+            </div>
+            <div class="user-name columns-2-of-4">
+                <h3>Alexandru Cheltuitor</h3>
+            </div>
+            <div class="places columns-4-of-4">
+                <button class="btn btn-primary self-center" id="places-menu-btn">Destinos</button>
+                <div class="sub-choice">
+                   <button class="btn btn-secondary" id="places-show-btn">Ver Destinos</button>
+                    <div class="table">
+                        <div class="table-header">
+                            <div class="header-item">ID</div>
+                            <div class="header-item">Destino</div>
+                            <div class="header-item">Adicionado</div>
+                            <div class="header-item">Editado</div>
+                            <div class="header-item">Accoes</div>
+                        </div>
+                        <div class="table-body-row">
+                            <div class="body-item">1</div>
+                            <div class="body-item">Lagos</div>
+                            <div class="body-item">Ontem</div>
+                            <div class="body-item">Hoje</div>
+                            <div class="body-item"><button>Apagar</button></div>
+                        </div>
+                    </div>
+                    <button class="btn btn-secondary" id="places-showform-btn">Adicionar Proximo Destino</button>  
+                    <form>
+                        <label for="">Nome</label>
+                        <input type="text" name="name">
+                        <label for="">Latitude</label>
+                        <input type="text" name="latitude">
+                        <label for="">Longitude</label>
+                        <input type="text" name="longitude">
 
+                        <button id="places-add-btn">Adicionar</button> 
+                    </form>
+                </div>                         
+            </div>
+            <div class="flavours columns-4-of-4">
+                <button class="btn btn-primary self-center" id="flavours-menu-btn">Sabores</button>  
+                <div class="sub-choice">           
+                    <button class="btn btn-secondary" id="flavours-show-btn">Ver Sabores</button>
+                    <div class="table">
+                        <div class="table-header">
+                            <div class="header-item">ID</div>
+                            <div class="header-item">Destino</div>
+                            <div class="header-item">Adicionado</div>
+                            <div class="header-item">Editado</div>
+                            <div class="header-item">Accoes</div>
+                        </div>
+                        <div class="table-body-row">
+                            <div class="body-item">1</div>
+                            <div class="body-item">Lagos</div>
+                            <div class="body-item">Ontem</div>
+                            <div class="body-item">Hoje</div>
+                            <div class="body-item"><button>Apagar</button></div>
+                        </div>
+                    </div>                
+                    <button class="btn btn-secondary" id="flavours-showform-btn">Adicionar Novo Sabor</button>
+                    <form>
+                        <label for="">Portugues</label>
+                        <input type="text" name="flavours_PT">
+                        <label for="">Ingles</label>
+                        <input type="text" name="flavours_EN">
+
+                        <button id="flavours-add-btn">Adicionar</button> 
+                    </form>
+                </div>
+            </div>
+            <div class="products columns-4-of-4">
+                <button class="btn btn-primary self-center" id="products-menu-btn">Produtos</button>    
+                <div class="sub-choice">             
+                    <button class="btn btn-secondary" id="products-show-btn">Ver Produtos</button>   
+                    <div class="table">
+                        <div class="table-header">
+                            <div class="header-item">ID</div>
+                            <div class="header-item">Destino</div>
+                            <div class="header-item">Adicionado</div>
+                            <div class="header-item">Editado</div>
+                            <div class="header-item">Accoes</div>
+                        </div>
+                        <div class="table-body-row">
+                            <div class="body-item">1</div>
+                            <div class="body-item">Lagos</div>
+                            <div class="body-item">Ontem</div>
+                            <div class="body-item">Hoje</div>
+                            <div class="body-item"><button>Apagar</button></div>
+                        </div>
+                    </div>             
+                    <button class="btn btn-secondary" id="products-showform-btn">Adicionar Novo Produto</button>
+                    <form>
+                        <label for="">Portugues</label>
+                        <input type="text" name="flavours_PT">
+                        <label for="">Ingles</label>
+                        <input type="text" name="flavours_EN">
+
+                        <button id="flavours-add-btn">Adicionar</button> 
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
