Styled the insert button

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -27,8 +27,8 @@
                     <div class="table">
                         <span class="table-header">ID</span>
                         <span class="table-header">Destino</span>
-                        <span class="table-header">Add</span>
-                        <span class="table-header">Edit</span>
+                        <span class="table-header">Desde</span>
+                        <span class="table-header">Ate</span>
                         <span class="table-header">Accoes</span>
                         <span>1</span>
                         <span>Lagos</span>
@@ -45,6 +45,10 @@
                     <form>
                         <label for="">Nome</label>
                         <input type="text" name="name">
+                        <label for="">Desde</label>
+                        <input type="date" name="name">
+                        <label for="">Ate</label>
+                        <input type="date" name="name">
                         <label for="">Latitude</label>
                         <input type="text" name="latitude">
                         <label for="">Longitude</label>
