--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"><!-- 
-    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"> -->
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Bom&sup2; - Abrimos em Breve</title>
 </head>
 <body>
     <!-- <div class="stripe stripe-left"></div> -->
