Added calendar to the webpage with different events

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,8 @@
         <header class="main-header">
             <div class="roadmap">
                 <div class="road-map-locator">
-                    <a href="https://www.google.com/maps/dir/?api=1&destination=37.104594,-8.674612" target="_blank">
+                    <div id="calendar"></div>
+                    <!-- <a href="https://www.google.com/maps/dir/?api=1&destination=37.104594,-8.674612" target="_blank">
                         <div class="destination card-background-dark">
                             <span>Praia dos Três Irmãos</span>
                             <span>27-10-2018</span>
@@ -83,7 +84,7 @@
                             <span>Aljezur</span>
                             <span>27-10-2018</span>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
                 <a id="show-locator" href="#" class="btn" style="align-self: end;">À nossa procura ?</a>
             </div>
