Made the calendar responsive

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="user-name columns-2-of-4">
-                <h3>Alexandru Cheltuitor</h3>
+                <h3>David Simões</h3>
             </div>
             <div class="places columns-4-of-4">
                 <button class="btn btn-primary self-center" id="places-menu-btn">Destinos</button>
